discussion/kv_engine/178758/178758_rev17_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52311: [2/n] Pause / Resume Bucket: BucketManager & ep-engine

Implement pause & resume commands in BucketManager, and for
ep-engine.

ep-engine notifies the KVStoreIface of pause / resume(), but KVStore
support is not yet implemented - see next patch in sequence.

Change-Id: I53f491a21f5a1e701bafd16ea7b3dd54ab5f786c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-08-31 08:46:32.000000000
Message: 
Uploaded patch set 17.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 09:14:57.000000000
Message: 
Patch Set 17: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19838/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.cc:837:23: error: member reference type "Bucket *" is a pointer; did you mean to use "->"? [clang-diagnostic-error]
            if (bucket.state != Bucket::State::Ready) {
                      ^
                      ->

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19838/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.cc:837:23:
error: member reference type "Bucket *" is a pointer; did you mean to use "->"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19838/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48772/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/buckets.cc(837): error C2228: left of ".state" must have class/struct/union ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48772/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40999/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/buckets.cc:837:23:
error: member reference type "Bucket *" is a pointer; did you mean to use "->"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40999/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22142/ : FAILURE

Compile error at [2022-08-31T09:13:28.120Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/buckets.cc:837:24:
error: request for member ?state? in ?bucket?, which is of pointer type ?Bucket*? (maybe you meant to use ?->? ?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22142/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30171/ : FAILURE

Compile error at [2022-08-31T09:12:44.051Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/buckets.cc:837:23:
error: member reference type "Bucket *" is a pointer; did you mean to use "->"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30171/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9632/ : FAILURE

Compile error at [2022-08-31T08:59:16.195Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@3/kv_engine/daemon/buckets.cc:837:24:
error: request for member ?state? in ?bucket?, which is of pointer type ?Bucket*? (maybe you meant to use ?->? ?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9632/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21790/ : FAILURE

Compile error at [2022-08-31T09:07:19.797Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/buckets.cc:837:24:
error: request for member ?state? in ?bucket?, which is of pointer type ?Bucket*? (maybe you meant to use ?->? ?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21790/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22879/ : FAILURE

Compile error at [2022-08-31T09:07:36.069Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/buckets.cc:837:23:
error: member reference type "Bucket *" is a pointer; did you mean to use "->"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22879/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21081/ : FAILURE

Compile error at [2022-08-31T08:59:50.721Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/daemon/buckets.cc:837:23:
error: member reference type "Bucket *" is a pointer; did you mean to use "->"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21081/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9533/ : FAILURE

Compile error at [2022-08-31T09:04:58.082Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/buckets.cc:837:23:
error: member reference type "Bucket *" is a pointer; did you mean to use "->"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9533/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19059/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
